force-app/main/default/objects/Governament__c/Governament__c.object-meta.xml
<CustomObject>
    <label>Governament</label>
    <nameField>
        <label>Governament Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Governaments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>