force-app/main/default/objects/Governament__c/fields/Cheif_Minister__c.field-meta.xml
<CustomField>
    <fullName>Cheif_Minister__c</fullName>
    <label>Cheif Minister</label>
    <length>50</length>
    <type>Text</type>
</CustomField>