force-app/main/default/objects/Governament__c/fields/Government_Email__c.field-meta.xml
<CustomField>
    <fullName>Government_Email__c</fullName>
    <label>Government Email</label>
    <type>Email</type>
</CustomField>