force-app/main/default/objects/Governament__c/fields/Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student</label>
    <referenceTo>Student__c</referenceTo>
    <relationshipLabel>Governaments</relationshipLabel>
    <relationshipName>Governaments</relationshipName>
    <type>Lookup</type>
</CustomField>